--- a/form.ui
+++ b/form.ui
@@ -343,6 +343,19 @@
     <string>Para o cálculo da área do polígono é preciso 4 pontos</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label_16">
+   <property name="geometry">
+    <rect>
+     <x>760</x>
+     <y>650</y>
+     <width>291</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Trabalho Feito por Arthur Miranda e Guilherme Antônio</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
