--- a/formulario.ui
+++ b/formulario.ui
@@ -101,7 +101,7 @@
   <widget class="QPushButton" name="area">
    <property name="geometry">
     <rect>
-     <x>370</x>
+     <x>380</x>
      <y>490</y>
      <width>93</width>
      <height>28</height>
@@ -114,7 +114,7 @@
   <widget class="QPushButton" name="volume">
    <property name="geometry">
     <rect>
-     <x>530</x>
+     <x>520</x>
      <y>490</y>
      <width>93</width>
      <height>28</height>
@@ -124,33 +124,7 @@
     <string>Volume</string>
    </property>
   </widget>
-  <widget class="QRadioButton" name="radioButton">
-   <property name="geometry">
-    <rect>
-     <x>790</x>
-     <y>110</y>
-     <width>151</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Formas Circulares</string>
-   </property>
-  </widget>
-  <widget class="QRadioButton" name="radioButton_2">
-   <property name="geometry">
-    <rect>
-     <x>790</x>
-     <y>140</y>
-     <width>141</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Formas Regulares</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit_4">
+  <widget class="QLineEdit" name="result">
    <property name="geometry">
     <rect>
      <x>740</x>
@@ -210,6 +184,32 @@
    </property>
    <property name="text">
     <string>Limpar</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="area_curl">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>530</y>
+     <width>111</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Area Circular</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="volume_curl">
+   <property name="geometry">
+    <rect>
+     <x>512</x>
+     <y>530</y>
+     <width>111</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Volume Circular</string>
    </property>
   </widget>
  </widget>
