--- a/formulario.ui
+++ b/formulario.ui
@@ -212,6 +212,19 @@
     <string>Volume Circular</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>670</y>
+     <width>471</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Trabalho feito por Arthur Miranda e Guilherme Antônio</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
